add_subdirectory(model)
add_subdirectory(racer)
add_subdirectory(mechanicalValues)
add_subdirectory(observer)
add_subdirectory(response)
add_subdirectory(presenter)
add_subdirectory(abstractModel)
add_subdirectory(racerController)
add_subdirectory(map)
add_subdirectory(mathCalc)
add_subdirectory(element)
add_subdirectory(interfaceCollisional)

