add_subdirectory(model)
add_subdirectory(racer)
add_subdirectory(mechanicalValues)
add_subdirectory(observer)
add_subdirectory(response)
add_subdirectory(presenter)
add_subdirectory(abstractModel)
add_subdirectory(racerController)
add_subdirectory(mathCalc)
add_subdirectory(gameTimer)
add_subdirectory(interfaceCollisional)

#add_subdirectory(parser)
#add_subdirectory(logger)
#add_subdirectory(element)
#add_subdirectory(map)

#add_subdirectory(viewer)
#add_subdirectory(sfViewerDetails)
#add_subdirectory(sfColor)
#add_subdirectory(drawableObject)
#add_subdirectory(drawableObjects)
#add_subdirectory(drawableRacer)
#add_subdirectory(menu)
#add_subdirectory(menuInfo)
#add_subdirectory(buttons)
